--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aiohttp>=2.2.5
 async-timeout>=2.0.1
 attrs>=17.4.0
 chardet>=3.0.4
-git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py
+# git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py
 diskcache>=3.0.1
 idna>=2.6
 idna-ssl>=1.0.1
